@@ -5,7 +5,7 @@ use ExtUtils::MakeMaker;
 
 WriteMakefile(
     NAME             => 'DBIx::XHTML_Table',
-    AUTHOR           => q{jeffa <info+cpan@unlocalhost.com>},
+    AUTHOR           => q{jeffa <jeffa@cpan.org>},
     VERSION_FROM     => 'lib/DBIx/XHTML_Table.pm',
     ABSTRACT_FROM    => 'lib/DBIx/XHTML_Table.pm',
     LICENSE          => 'artistic_2',
@@ -15,10 +15,20 @@ WriteMakefile(
         'ExtUtils::MakeMaker' => 0,
     },
     BUILD_REQUIRES => {
-        'DBI'        => 0,
         'Test::More' => 0,
     },
-    PREREQ_PM => { },
+    PREREQ_PM => {
+        'DBI'        => 0,
+    },
+    (! eval { ExtUtils::MakeMaker->VERSION(6.46) } ? () :
+        (META_ADD => {
+            resources => {
+                homepage   => 'https://github.com/jeffa/DBIx-XHTML_Table',
+                repository => 'https://github.com/jeffa/DBIx-XHTML_Table.git',
+                bugtracker => 'https://github.com/jeffa/DBIx-XHTML_Table/issues',
+            },
+        })
+    ),
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean => { FILES => 'DBIx-XHTML_Table-*' },
 );
