@@ -1,6 +1,7 @@
 Revision history for Perl extension DBIx::XHTML_Table.
 
 1.46
+    - added github meta to makefile
     - reformatted source code to use spaces for indentation
         instead of tabs -- all repo changes prior to 1.37 are gone anyway
 
